product-api-java/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  labels:
    app: product-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
      - name: product-api
        image: wajidiqbal787/product-api-java:latest   # <-- Your pushed Docker image
        ports:
        - containerPort: 8080
