product-api-java/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-api-svc
spec:
  type: NodePort
  selector:
    app: product-api
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32000
      protocol: TCP
